--- a/SpotifyGame/View/Main.xaml
+++ b/SpotifyGame/View/Main.xaml
@@ -6,6 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewmodel="using:SpotifyGame.VM"
+    xmlns:Converters="using:SpotifyGame.Converters"
     mc:Ignorable="d"
     Background="{StaticResource SpotifyBlack}"
     >
@@ -27,14 +28,23 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <TextBlock Style="{StaticResource InformationBox}"
-            Grid.Row="0" Grid.Column="0" Text="{Binding Playlist.Title, Mode=OneWay}"/>
-        
-        <TextBlock Style="{StaticResource InformationBox}"
-                   Grid.Row="0" Grid.ColumnSpan="2"  Grid.Column="1"
-                   Height="Auto" HorizontalAlignment="Stretch"
-                   Text="{Binding Song, Mode=OneWay}"/>
+        <StackPanel Grid.Row="0" Grid.RowSpan="1" Grid.Column="0" Orientation="Vertical">
+            <TextBlock Style="{StaticResource InformationBox}"
+                       Foreground="{StaticResource SpotifyLightGray}"
+                       Text="{Binding PlaylistTitle, Mode=OneWay}"/>
+        </StackPanel>
 
+        <ListView Grid.Row="0" Grid.ColumnSpan="2"  Grid.Column="1" 
+                  ItemsSource="{Binding Fields}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Style="{StaticResource InformationBox}"
+                   Height="Auto" HorizontalAlignment="Stretch"
+                   Text="{Binding}"/>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+
+        </ListView>
         <TextBox Style="{StaticResource TextField}"
             Grid.Row="1" Grid.ColumnSpan="2" Grid.Column="1" />
 
